@@ -438,3 +438,6 @@
 [2022-06-24]
 - Updated the respawn time of Ammo Crate.
 - Updated the flags of Chunk of Boar Meat to allow every member of a group to loot it.
+- Updated the flags of Chunk of Boar Intestines to allow every member of a group to loot it.
+- Updated the flags of Chunk of Bear Meat to allow every member of a group to loot it.
+- Updated the flags of Chunk of Spider Ichor to allow every member of a group to loot it.
